# capella_ros_docker

./: .Dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  docker-compose.yml.bak
.devcontainer/files/: ros2.list
src/: ros2.repos
src/capella_nav_and_carto_server/: package.xml  setup.cfg  setup.py
src/capella_nav_and_carto_server/capella_nav_and_carto_server/: carto_client.py  infrared_detection_service.py  map_monitor_node.py  map_test_node.py  mapupdates_test_node.py  missionstate_node.py  nav_and_carto_service.py  nav_client.py  node_manager.py  stop_client.py  test.py  test_node.py  wifi_test_node.py
src/capella_nav_and_carto_server/launch/: launch.xml
src/capella_ros_launcher/: CMakeLists.txt  package.xml
src/capella_ros_launcher/config/: bainan_1_2d_localization.lua  bainan_1_2d_localization_wr_80.lua  bainan_1_2d_mapping.lua  bainan_1_2d_mapping_wr_80.lua
src/capella_ros_launcher/include/dsfrobot/: dsf_base.hpp
src/capella_ros_launcher/launch/: bringup.launch.py  bringup_opt.launch.py  bringup_opt_for_charge.launch.py  bringup_opt_pc.launch.py  capella_wr_lidar_cartographer.launch.py  capella_wr_lidar_cartographer_localization.launch.py  coverage_nav2.launch.py  display.launch.py  nav2.launch.py  nav2_opt.launch.py  nav2_opt_for_charge.launch.py  nav2_opt_pc.launch.py  nav2_opt_robot_localization.launch.py  sim_bringup_opt.launch.py  sim_capella_wr_lidar_cartographer_localization.launch.py  sim_nav2_opt.launch.py
src/capella_ros_launcher/param/: dsf_nav2.yaml  dsf_nav2_2.yaml  dsf_nav2_for_ad.yaml  dsf_nav2_for_ad_2.yaml  dsf_nav2_for_ad_3.yaml  dsf_nav2_for_ad_4_ad.yaml  dsf_nav2_for_ad_4_exhibition.yaml  dsf_nav2_for_ad_5_ad.yaml  dsf_nav2_for_ad_5_exhibition.yaml  dsf_nav2_opt_pc.yaml  imu_ekf_node.yaml  nav2_smac.yaml  nav2_smac_dwb.yaml  robot_localization.yaml  robot_localization_map copy.yaml  robot_localization_map.yaml  robot_localization_opt(prohibi modify).yaml  robot_localization_opt.yaml
src/capella_ros_launcher/rviz/: nav2_default_view.rviz  rviz_config.rviz  urdf_config.rviz
src/capella_ros_launcher/src/: auto_clear_costmap_node.cpp  dsf_base.cpp  dsf_base_node.cpp  test_odom.cpp
src/capella_ros_launcher/urdf/: bainan_1_description.urdf  bainan_2_description.urdf  bainan_2_description_for_charge.urdf  bainan_for_ad_1.urdf  bainan_for_ad_2.urdf  bainan_for_ad_3.urdf  bainan_for_ad_4.urdf  bainan_for_ad_5.urdf
