<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capella_ros_launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hcj@todo.todo">hcj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_localization</depend>
  <depend>rclcpp</depend>
  <!-- <depend>capella_ros_msg</depend> -->
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <!-- <depend>teb_local_planner</depend> -->
  <depend>joint_state_publisher</depend>
  <depend>angles</depend>
  <depend>rviz2</depend>
  
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
